--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 
 # Includes an icon in the footer for each username you enter
 footer-links:
-  github: https://github.com/r3vhunter
-  twitter: https://twitter.com/r3vhunter
+  github: https://github.com/r3vhunter/
+  twitter: https://twitter.com/r3vhunter/
  
 
 
